--- a/lib/adoptoposs_web/templates/shared/footer.html.eex
+++ b/lib/adoptoposs_web/templates/shared/footer.html.eex
@@ -1,9 +1,10 @@
 <section>
   <div class="flex flex-row flex-wrap justify-between">
     <ul>
-      <li><a href="/privacy" title="Privacy Policy">Privacy Policy</a></li>
       <li><a href="/faq" title="Frequently Asked Questions">FAQ</a></li>
       <li><a href="https://github.com/paulgoetze/adoptoposs/issues/new" title="Open an Issue">Found any bug?</a></li>
+      <li><a href="/privacy" title="Privacy Policy">Privacy Policy</a></li>
+      <li><a href="https://twitter.com/paulgoetze" title="Contact">Contact</a></li>
     </ul>
 
     <div>
