--- a/lib/adoptoposs_web/templates/repo/index.html.leex
+++ b/lib/adoptoposs_web/templates/repo/index.html.leex
@@ -36,13 +36,25 @@
          phx-hook="InfiniteScroll"
          data-page=<%= @page %>
          class="flex flex-col w-full">
-      <%= for repo <- @repositories do %>
-        <%= live_component @socket, AdoptopossWeb.RepoComponent,
-          id: "repo-#{hashed(repo.id)}",
-          user_id: @user_id,
-          repo: repo,
-          submitted: repo.id in @submitted_repos,
-          to_be_submitted: repo.id == @to_be_submitted %>
+
+      <%= if Enum.empty?(@repositories) do %>
+        <div class="flex flex-col w-full p-8 justify-center items-center text-gray-600 md:text-lg text-center bg-white border border-gray-300 rounded">
+          <p class="text-lg md:text-2xl text-gray-600 text-center mb-4 md:mb-8">
+            We could not find any repos for <span class="text-red-500"><%= @organization.name %></span> yet.
+          </p>
+          <p>
+            Head over to your <%= link "GitHub account", to: "https://github.com/organizations/#{@organization.id}/repositories/new" %> to create one and it will appear here.
+          </p>
+        </div>
+      <% else %>
+        <%= for repo <- @repositories do %>
+          <%= live_component @socket, AdoptopossWeb.RepoComponent,
+            id: "repo-#{hashed(repo.id)}",
+            user_id: @user_id,
+            repo: repo,
+            submitted: repo.id in @submitted_repos,
+            to_be_submitted: repo.id == @to_be_submitted %>
+        <% end %>
       <% end %>
     </div>
   </div>
