--- a/lib/adoptoposs_web/templates/layout/root.html.eex
+++ b/lib/adoptoposs_web/templates/layout/root.html.eex
@@ -4,7 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Adoptoposs · Keep open source software maintained</title>
+    <%= render AdoptopossWeb.SharedView, "meta_tags.html", assigns %>
+
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <%= render AdoptopossWeb.SharedView, "google_analytics.html" %>
 
