Change twitter contact link to adoptoposs account

--- a/lib/adoptoposs_web/templates/shared/footer.html.eex
+++ b/lib/adoptoposs_web/templates/shared/footer.html.eex
@@ -4,7 +4,7 @@
       <li><a href="/faq" title="Frequently Asked Questions">FAQ</a></li>
       <li><a href="https://github.com/adoptoposs/adoptoposs/issues/new" title="Open an Issue">Found any bug?</a></li>
       <li><a href="/privacy" title="Privacy Policy">Privacy Policy</a></li>
-      <li><a href="https://twitter.com/paulgoetze" title="Contact">Contact</a></li>
+      <li><a href="https://twitter.com/adoptoposs" title="Contact">Contact</a></li>
     </ul>
 
     <div>
