Change route /auth/:provider/logout to /logout
The provider is not handled in the AuthController, so we can just skip
it alltogether.

--- a/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.eex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.eex
@@ -36,7 +36,7 @@
     class: "nav-link" %>
 
   <%= link "Log out",
-    to: Routes.auth_path(@conn, :delete, @current_user.provider),
+    to: Routes.auth_path(@conn, :delete),
     class: "nav-link" %>
 
   <div class="flex justify-end md:inline-block">
