Change medium post links to friend-links
...in order to keep the post accessible for everyone.

--- a/lib/adoptoposs_web/templates/landing_page/index.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.leex
@@ -136,7 +136,7 @@
 
     <p class="italic text-base md:text-lg mt-4 md:mt-8 md:w-2/3 self-center text-center">
       If you want to learn more about why having co-maintainers with full access on your OSS project brings a lot of stability and benefits, read about it in
-      <%= link "this post", to: "https://medium.com/p/74c1cd5df5d5" %>.
+      <%= link "this post", to: "https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a" %>.
     </p>
   </section>
 </div>
