--- a/lib/adoptoposs_web/templates/shared/meta_tags.html.eex
+++ b/lib/adoptoposs_web/templates/shared/meta_tags.html.eex
@@ -1,7 +1,8 @@
-<% title = "Adoptoposs · Keep open source software maintained" %>
-<% description = "Adoptoposs helps maintainers of open source software to finding co-maintainers or people to take over their project." %>
-<% url = Plug.Conn.request_url(@conn) %>
-<% image = Routes.static_url(@conn, "/images/adoptoposs-social.jpg") %>
+<% title = AdoptopossWeb.SharingView.title(assigns) %>
+<% description = AdoptopossWeb.SharingView.description(assigns) %>
+<% image = AdoptopossWeb.SharingView.image(assigns) %>
+<% url = AdoptopossWeb.SharingView.url(assigns) %>
+<% twitter_card_type = AdoptopossWeb.SharingView.twitter_card_type(assigns) %>
 
 <title><%= title %></title>
 <meta content="<%= title %>" name="title">
@@ -13,10 +14,12 @@
 <meta content="<%= title %>" property="og:title">
 <meta content="<%= description %>" property="og:description">
 <meta content="<%= image %>" property="og:image">
+<meta content="Adoptoposs" property="og:site_name">
 
 <%# Twitter tags %>
-<meta content="summary_large_image" name="twitter:card">
+<meta content="<%= twitter_card_type %>" name="twitter:card">
 <meta content="<%= url %>" name="twitter:url">
 <meta content="<%= title %>" name="twitter:title">
 <meta content="<%= description %>" name="twitter:description">
 <meta content="<%= image %>" name="twitter:image">
+<meta content="@adoptoposs" name="twitter:site">
