--- a/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.eex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.eex
@@ -4,14 +4,42 @@
     class: "text-md px-4 py-2 leading-none border border-red-300 rounded" %>
 </div>
 
-<div id="menu-toggle" class="block md:hidden self-end">
-  <button class="flex items-center px-3 py-2 border-red-300 rounded hover:text-white hover:bg-red-400">
+<details class="toggle close-on-link-clicked block md:hidden self-end">
+  <summary class="toggle-trigger flex items-center px-3 py-2 text-red-400 border border-red-300 rounded hover:text-gray-200 hover:bg-red-400 focus:text-white focus:bg-red-500">
     <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
       <title>Menu</title>
       <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
     </svg>
-  </button>
-</div>
+  </summary>
+
+  <div class="toggle-content absolute left-0 right-0 bg-white z-20 shadow-md p-6">
+    <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.SearchLive), class: "nav-link" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline h-4 w-4 fill-current mr-2">
+        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+      </svg>
+      <span>Search</span>
+    <% end %>
+
+    <%= live_redirect "Your Projects",
+      to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
+      class: "nav-link" %>
+
+    <%= live_redirect "Settings",
+      to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive),
+      class: "nav-link" %>
+
+    <hr class="border-red-200 mt-4">
+
+    <%= link to: Routes.auth_path(@conn, :delete), class: "nav-link" do %>
+        <div class=" flex flex-row justify-between items-center">
+          <span>Log out</span>
+          <img class="rounded-full h-10 w-10"
+            src="<%= @current_user.avatar_url %>"
+            alt="<%=@current_user.name %>">
+        </div>
+    <% end %>
+  </div>
+</details>
 
 <div id="mobile-menu" class="hidden w-full text-md md:flex-grow justify-end md:flex md:flex-row md:items-end md:w-auto md:items-center mt-4 md:mt-0">
   <div class="hidden md:inline-block">
@@ -27,21 +55,31 @@
     <span>Search</span>
   <% end %>
 
-  <%= live_redirect "Your Projects",
-    to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
-    class: "nav-link" %>
+  <div class="flex justify-end md:inline-block hidden md:visible">
+    <details class="toggle close-on-link-clicked">
+      <summary class="toggle-trigger focus:outline-none focus:border focus:border-red-400">
+        <img class="rounded-full h-10 w-10"
+          src="<%= @current_user.avatar_url %>"
+          alt="<%=@current_user.name %>">
+      </summary>
 
-  <%= live_redirect "Settings",
-    to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive),
-    class: "nav-link" %>
+      <div class="relative">
+        <div class="toggle-content absolute right-0 left-auto py-2 mt-2 rounded border border-red-300 bg-gray-100 shadow-md w-max-content">
+          <%= live_redirect "Your Projects",
+            to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
+            class: "block px-4 py-2 text-right" %>
 
-  <%= link "Log out",
-    to: Routes.auth_path(@conn, :delete),
-    class: "nav-link" %>
+          <%= live_redirect "Settings",
+            to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive),
+            class: "block px-4 py-2 text-right" %>
 
-  <div class="flex justify-end md:inline-block">
-    <img class="rounded-full h-10 w-10"
-      src="<%= @current_user.avatar_url %>"
-      alt="<%=@current_user.name %>">
+          <hr class="border-red-200 mt-2 mb-1">
+
+          <%= link "Log out",
+            to: Routes.auth_path(@conn, :delete),
+            class: "block px-4 py-2 text-right" %>
+        </div>
+      </div>
+    </details>
   </div>
 </div>
