Fix mobile nav + title text for small screen width
- Hide the search text, only show maginifying class on < sm,
  show text only for > sm.
- Scale down title text size for small screen width

--- a/lib/adoptoposs_web/templates/landing_page/index.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.leex
@@ -1,6 +1,6 @@
 <div class="pt-12 pb-16 bg-red-500">
   <section>
-    <h1 class="text-center text-6xl font-semibold uppercase">
+    <h1 class="text-center text-5xl sm:text-6xl font-semibold uppercase">
       Adoptop<acronym title="Open Source Software">oss</acronym>.
     </h1>
     <p class="text-white text-center text-2xl md:text-4xl leading-tight">
