Change email adapter from SendGrid to MailGun
...because of issues with the SendGrid service.

--- a/lib/adoptoposs_web/templates/page/privacy.html.eex
+++ b/lib/adoptoposs_web/templates/page/privacy.html.eex
@@ -78,7 +78,7 @@
         <%= link "Heroku", to: "https://devcenter.heroku.com/articles/gdpr" %>. Cloud service provider.
       </li>
       <li>
-        <%= link "Twilio (Sendgrid)", to: "https://www.twilio.com/gdpr" %>. Text messaging service.
+        <%= link "Mailgun", to: "https://www.mailgun.com/gdpr/" %>. Text messaging service.
       </li>
       <li>
         <%= link "New Relic", to: "https://newrelic.com/termsandconditions/privacy" %>. Performance monitoring service.
