--- a/lib/adoptoposs_web/templates/layout/email.html.eex
+++ b/lib/adoptoposs_web/templates/layout/email.html.eex
@@ -8,7 +8,7 @@
       Always keep maintaining! <br/>
       - Your Adoptoposs
     </p>
-    <img src="<%= Routes.static_path(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.png")%>" alt="Adoptoposs"/>
+    <img src="<%= Routes.static_url(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.png")%>" alt="Adoptoposs"/>
   </body>
   <footer>
     <div>
