--- a/lib/adoptoposs_web/templates/email/project_recommendations.html.eex
+++ b/lib/adoptoposs_web/templates/email/project_recommendations.html.eex
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  We’ve found some projects on Adoptoposs for which you might be interested in helping with their maintanance:
+  We’ve found some projects on Adoptoposs you might be interested in helping with their maintenance:
 </p>
 
 <%= for {language_name, projects} <- Enum.group_by(@projects, & &1.language.name) do %>
