--- a/lib/adoptoposs_web/templates/landing_page/index.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.leex
@@ -33,7 +33,7 @@
         <img src="<%= Routes.static_path(@socket, "/images/adoptoposs-contact.png")%>" class="mb-4 md:mb-6 h-48 md:h-auto">
         <h2 class="text-center text-gray-800 mb-2">Contact Maintainers</h2>
         <p class="text-lg text-hyphen md:text-xl max-w-sm mx-auto">
-          You want to help with <acronym title="Open Source Software">OSS</acronym> maintainance?
+          You want to help with <acronym title="Open Source Software">OSS</acronym> maintenance?
           Contacting maintainers on Adoptoposs is just one click away.
         </p>
         <div></div>
@@ -44,7 +44,7 @@
         <h2 class="text-center text-red-500 mb-2">Explore Projects</h2>
         <p class="text-lg text-hyphen md:text-xl max-w-sm mx-auto">
           Not sure where to help?
-          Get projects for your favourite programming languages directly into your inbox.
+          Get projects for your favorite programming languages directly into your inbox.
         </p>
         <div></div>
       </div>
