--- a/lib/adoptoposs_web/templates/page/privacy.html.eex
+++ b/lib/adoptoposs_web/templates/page/privacy.html.eex
@@ -12,7 +12,7 @@
   <h2 class="mb-2">Identity & Access</h2>
 
   <p>
-    When you log in to Adoptoposs via your GitHub account, we store your name, username, and email adress. That's just so you can use the features of the app, and we can send you notifications, or other essential information. We’ll never sell your personal info to third parties, and we won’t use your name or GitHub account data in marketing statements without your permission, either.
+    When you log in to Adoptoposs via your GitHub account, we store your name, username, and email address. That's just so you can use the features of the app, and we can send you notifications, or other essential information. We’ll never sell your personal info to third parties, and we won’t use your name or GitHub account data in marketing statements without your permission, either.
   </p>
 
   <p>
