--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -5,7 +5,7 @@
     <div class="flex flex-col md:p-4 my-6 w-full justify-center items-center">
       <p class="text-lg md:text-2xl text-gray-600 text-center">
         Great.</br>
-        Looks like you’re happy with the maintainance of your Repos.
+        Looks like you’re happy with the maintenance of your Repos.
       </p>
       <div class="flex flex-col w-full p-8 mt-6 justify-center items-center bg-white rounded border border-gray-300 text-gray-600 md:text-lg text-center">
         <p>
