--- a/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
@@ -27,7 +27,7 @@
       phx_disable_with: "…" %>
 
     <p>
-      Follow your favourite languages in
+      Follow your favorite languages in
       <%= live_redirect "your settings", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive) %>.</br>
       Related projects will appear here.
     </p>
